--- a/SCSS/components/team.scss
+++ b/SCSS/components/team.scss
@@ -4,6 +4,12 @@
     background-image: url(../img/bg4.jpg);
     
     position: relative;
+    @include phone {
+        min-height: 800px;
+    }
+    @include tablet {
+        min-height: 1025px;
+    }
 }
 .team__right{
 position: absolute;
