--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -1,5 +1,10 @@
 
-
+html{
+    font-size: 16px;
+    @include phone{
+        font-size: 14px;
+    }
+}
 body {
     min-width: 960px;
 }
@@ -12,6 +17,14 @@ position: relative;
 }
 .container {
     @include container;
+    @include tablet {
+        width: 720px;
+        min-height: 1025px;
+    }
+    @include phone{
+        width: 460px;
+        min-height: 800px;
+    }
 }
 
 .we-do {
@@ -125,6 +138,9 @@ position: relative;
 .header {
     display: flex;
     margin-bottom: -5%;
+    @include tablet {
+        margin-bottom: 5%;
+    }
 }
 
 .header__nav--list {
@@ -134,6 +150,9 @@ position: relative;
 .header__nav {
     margin-left: 3.1%;
     padding-top: 2%;
+    @include tablet {
+        display: none;
+    }
 }
 
 .header__nav--item {
@@ -160,10 +179,20 @@ position: relative;
 .header__nav--btn-wrap {
     margin-left: 22px;
     padding-top: 34px;
+    @include tablet {
+        margin-left: 66%;
+    }
+    @include phone{
+        margin-left: 44%;
+    }
 }
 
 .we-do__content {
     display: flex;
+    @include tablet {
+        flex-direction: column;
+    align-items: center;
+    }
 }
 .we-do__img {
     margin-left: 4%;
@@ -172,10 +201,22 @@ position: relative;
     background-image: url(../img/burgerfirst.png);
     width: 28.18rem;
     height: 26.5rem;
-}
+    @include tablet {
+        margin-left: 0;
+    }
+    }
+
 .we-do__text {
     margin-left: 3%;
     padding-top: 14%;
+    @include tablet {
+        margin-left: 1%;
+    padding-top: 0%;
+    width: 55%;
+    }
+    @include phone{
+        width: 73%;
+    }
 }
 
 .we-do__text--first {
