--- a/SCSS/components/footer.scss
+++ b/SCSS/components/footer.scss
@@ -5,12 +5,25 @@
     background-image: url(../img/bg6.jpg);
     min-height: 60px;
     width: 100%;
+    @include phone {
+        min-height: 117px;
+    }
+    @include tablet {
+        min-height: 60px;
+    }
 }
 
 .footer__address{
     @include fontUbuntu;
     font-size: 0.8rem;
     line-height: 1.5rem;
+}
+.footer__phone-wrap {
+    @include phone {
+        display: flex;
+    justify-content: center;
+    }
+   
 }
 .footer__phone{
     @extend .footer__address;
@@ -31,6 +44,10 @@
 .footer .container{
     display: flex;
     min-height: 0;
+    @include phone {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 .footer__contacts{
     display: flex;
