--- a/SCSS/components/second-section-we-best.scss
+++ b/SCSS/components/second-section-we-best.scss
@@ -16,6 +16,15 @@
     justify-content: center;
  padding-top: 13%;
     margin-bottom: 6%;
+    @include  tablet {
+        margin-bottom: 9%;
+
+    }
+    @include phone{
+        font-size: 3.57rem;
+        line-height: 4.29rem;
+        margin-bottom: 0%;
+    }
 }
 .advantages{
     list-style: none;
@@ -23,12 +32,20 @@
     margin-left: 0;
     padding-left: 0;
     justify-content: space-between;
+    @include phone{
+        flex-direction: column;
+    }
 }
 .advantages__item{
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include phone{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 7%;
+    }
 }
 .advantages__title{
     @include fontWhiteLifehack;
@@ -37,6 +54,9 @@
     color: $colorBlack;
     text-align: center;
     margin-bottom: 0;
+    @include phone{
+        text-align: left;
+    }
 }
 .advantages__text {
     @include fontUbuntu;
@@ -44,6 +64,9 @@
     line-height: 1.5rem;
     color: $colorBlack;
     text-align: center;
+    @include phone{
+        text-align: left;
+    }
 }
 .advantages__img{
     margin-bottom: 2%;
@@ -55,6 +78,9 @@
         
         width:6.25rem;
         height: 5.6rem;
+        @include phone{
+            margin-right: 9%;
+        }
         
     }
     &--hand{
@@ -62,6 +88,9 @@
         
         width:4.375rem;
         height: 5.31rem;
+        @include phone{
+            margin-right: 15%;
+        }
         
     }
     &--sheet{
@@ -69,7 +98,18 @@
         
         width:5.43rem;
         height: 4.75rem;
-       
+        @include  tablet {
+            margin-bottom: 7%;
+        }
+        @include phone{
+            margin-right: 12%;
+        }
     }
     
+}
+.advantages__text-wrap {
+    @include phone{
+        width: 62%;
+    }
+   
 }
