--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 /*mixins*/
 /*mixins close*/
+/*media*/
+/*media close*/
+html {
+  font-size: 16px; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    html {
+      font-size: 14px; } }
+
 body {
   min-width: 960px; }
 
@@ -19,6 +27,14 @@ body {
   display: block;
   position: relative;
   min-height: 650px; }
+  @media screen and (max-width: 768px) {
+    .container {
+      width: 720px;
+      min-height: 1025px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .container {
+      width: 460px;
+      min-height: 800px; } }
 
 .we-do {
   background-size: cover;
@@ -29,6 +45,12 @@ body {
   background-color: #111114;
   background-image: url(../img/bg1.jpg);
   margin-bottom: -3.5%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .we-do {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .we-do {
+      min-height: 1025px; } }
 
 .header__nav--link {
   text-decoration: none;
@@ -143,6 +165,9 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: -5%; }
+  @media screen and (max-width: 768px) {
+    .header {
+      margin-bottom: 5%; } }
 
 .header__nav--list {
   display: -webkit-box;
@@ -152,6 +177,9 @@ body {
 .header__nav {
   margin-left: 3.1%;
   padding-top: 2%; }
+  @media screen and (max-width: 768px) {
+    .header__nav {
+      display: none; } }
 
 .header__nav--item {
   position: relative;
@@ -173,11 +201,26 @@ body {
 .header__nav--btn-wrap {
   margin-left: 22px;
   padding-top: 34px; }
+  @media screen and (max-width: 768px) {
+    .header__nav--btn-wrap {
+      margin-left: 66%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .header__nav--btn-wrap {
+      margin-left: 44%; } }
 
 .we-do__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .we-do__content {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .we-do__img {
   margin-left: 4%;
@@ -186,10 +229,21 @@ body {
   background-image: url(../img/burgerfirst.png);
   width: 28.18rem;
   height: 26.5rem; }
+  @media screen and (max-width: 768px) {
+    .we-do__img {
+      margin-left: 0; } }
 
 .we-do__text {
   margin-left: 3%;
   padding-top: 14%; }
+  @media screen and (max-width: 768px) {
+    .we-do__text {
+      margin-left: 1%;
+      padding-top: 0%;
+      width: 55%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .we-do__text {
+      width: 73%; } }
 
 .we-do__text--first {
   margin-bottom: 5%;
@@ -220,6 +274,12 @@ body {
   background-color: #f6f0ec;
   background-image: url(../img/bg2.jpg);
   margin-bottom: -1.65%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .we-best {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .we-best {
+      min-height: 1025px; } }
 
 .we-best__title {
   font-family: Gagalin, Arial, sans-serif;
@@ -238,6 +298,14 @@ body {
   justify-content: center;
   padding-top: 13%;
   margin-bottom: 6%; }
+  @media screen and (max-width: 768px) {
+    .we-best__title {
+      margin-bottom: 9%; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .we-best__title {
+      font-size: 3.57rem;
+      line-height: 4.29rem;
+      margin-bottom: 0%; } }
 
 .advantages {
   list-style: none;
@@ -249,6 +317,12 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .advantages {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .advantages__item {
   -webkit-box-flex: 1;
@@ -264,6 +338,16 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .advantages__item {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      margin-bottom: 7%; } }
 
 .advantages__title {
   font-family: Lifehack, Arial, sans-serif;
@@ -276,6 +360,9 @@ body {
   color: #2f3234;
   text-align: center;
   margin-bottom: 0; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .advantages__title {
+      text-align: left; } }
 
 .advantages__text {
   text-decoration: none;
@@ -288,6 +375,9 @@ body {
   line-height: 1.5rem;
   color: #2f3234;
   text-align: center; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .advantages__text {
+      text-align: left; } }
 
 .advantages__img {
   margin-bottom: 2%;
@@ -297,14 +387,30 @@ body {
     /* background-image: url(../../img/icons/meat.svg);*/
     width: 6.25rem;
     height: 5.6rem; }
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      .advantages__img--meat {
+        margin-right: 9%; } }
   .advantages__img--hand {
     /*background-image: url(../../img/icons/hand.svg);*/
     width: 4.375rem;
     height: 5.31rem; }
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      .advantages__img--hand {
+        margin-right: 15%; } }
   .advantages__img--sheet {
     /*background-image: url(../../img/icons/natural.svg);*/
     width: 5.43rem;
     height: 4.75rem; }
+    @media screen and (max-width: 768px) {
+      .advantages__img--sheet {
+        margin-bottom: 7%; } }
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      .advantages__img--sheet {
+        margin-right: 12%; } }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .advantages__text-wrap {
+    width: 62%; } }
 
 .slider {
   background-color: #f9b43b; }
@@ -313,6 +419,12 @@ body {
   min-height: 650px;
   width: 100%;
   margin-bottom: -3.5%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .reviews {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .reviews {
+      min-height: 1025px; } }
 
 .reviews__title {
   position: absolute;
@@ -426,6 +538,18 @@ body {
   background-color: #111114;
   background-image: url(../img/bg4.jpg);
   position: relative; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .team {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .team {
+      min-height: 1025px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .team {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .team {
+      min-height: 1025px; } }
 
 .team__right {
   position: absolute;
@@ -551,6 +675,12 @@ body {
   background-image: url(../img/bg5.jpg);
   position: relative;
   overflow: hidden; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .menu {
+      min-height: 1025px; } }
 
 .menu__list {
   list-style: none;
@@ -645,6 +775,12 @@ body {
   background-image: url(../img/ac1.jpg);
   width: 5rem;
   height: 100%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg1 {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .menu__btn--bg1 {
+      min-height: 1025px; } }
 
 .menu__btn--bg2 {
   background-size: cover;
@@ -655,6 +791,12 @@ body {
   background-image: url(../img/ac2.jpg);
   width: 5rem;
   height: 100%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg2 {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .menu__btn--bg2 {
+      min-height: 1025px; } }
 
 .menu__btn--bg3 {
   background-size: cover;
@@ -665,6 +807,12 @@ body {
   background-image: url(../img/ac3.jpg);
   width: 5rem;
   height: 100%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg3 {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .menu__btn--bg3 {
+      min-height: 1025px; } }
 
 .order__title {
   font-family: Gagalin, Arial, sans-serif;
@@ -679,6 +827,11 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .order__title {
+      text-align: center;
+      font-size: 3.57rem;
+      line-height: 4.28rem; } }
 
 .form__block-title, .form__reset {
   text-decoration: none;
@@ -699,6 +852,12 @@ body {
   background-color: #2f3234;
   background-image: url(../img/bg3.jpg);
   padding-top: 9%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .order {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .order {
+      min-height: 1025px; } }
 
 .form__input,
 .form__textaria {
@@ -718,6 +877,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 20px; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__row {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .form__radio-list {
   list-style: none;
@@ -728,6 +892,10 @@ body {
   margin-left: 6%;
   padding-left: 0;
   margin-top: 8%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__radio-list {
+      margin-left: auto;
+      margin-right: auto; } }
 
 .form__radio-item {
   margin-right: 43px; }
@@ -784,6 +952,9 @@ body {
   height: 16px;
   border-radius: 50%;
   background-color: white; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__block input[type="radio"] + .radio-indicator {
+      top: 19px; } }
 
 .form__block input[type="radio"]:checked + .radio-indicator::before {
   content: "";
@@ -802,6 +973,10 @@ body {
   width: 15px;
   height: 15px;
   background-color: white; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__block input[type="checkbox"] + .checkbox-indicator {
+      top: 3px;
+      left: 176px; } }
 
 .form__block input[type="checkbox"]:checked + .checkbox-indicator::before,
 .form__block input[type="checkbox"]:checked + .checkbox-indicator::after {
@@ -815,20 +990,45 @@ body {
   background-image: url(../img/check.png); }
 
 /*Стилизация чекбоксов и радиобаттонов close*/
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .form__radio-item {
+    margin-right: 40px;
+    margin-left: 25px; } }
+
 .order__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .order__form {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .form__left,
 .form__right {
-  width: 45%; }
+  width: 470px; }
 
 .form__right {
   margin-left: 6%; }
+  @media screen and (max-width: 768px) {
+    .form__right {
+      margin-left: 0; } }
 
 .form__block-title--mr {
   margin-left: 6%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .form__block-title--mr {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .video {
   background-size: cover;
@@ -838,6 +1038,12 @@ body {
   width: 100%;
   background-color: #efedeb;
   background-image: url(../img/bg7.jpg); }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .video {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .video {
+      min-height: 1025px; } }
 
 .map {
   background-size: cover;
@@ -848,6 +1054,12 @@ body {
   background-color: #111114;
   background-image: url(../img/map.jpg);
   position: relative; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .map {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .map {
+      min-height: 1025px; } }
 
 .footer {
   background-color: #2f3234;
@@ -859,6 +1071,18 @@ body {
   background-image: url(../img/bg6.jpg);
   min-height: 60px;
   width: 100%; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .footer {
+      min-height: 800px; } }
+  @media screen and (max-width: 768px) {
+    .footer {
+      min-height: 1025px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .footer {
+      min-height: 117px; } }
+  @media screen and (max-width: 768px) {
+    .footer {
+      min-height: 60px; } }
 
 .footer__address, .footer__phone {
   text-decoration: none;
@@ -869,6 +1093,15 @@ body {
   line-height: 1.8rem;
   font-size: 0.8rem;
   line-height: 1.5rem; }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .footer__phone-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
 
 .footer__phone {
   color: #f9b43b; }
@@ -892,6 +1125,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   min-height: 0; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .footer .container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .footer__contacts {
   display: -webkit-box;
@@ -959,65 +1201,94 @@ body {
   src: url(../fonts/Ubuntu/Ubuntu-B.woff2) format("woff2");
   font-weight: 700; }
 
-@media (max-width: 768px) {
-  .container {
-    width: 720px; }
-  .header {
-    margin-bottom: 5%; }
-  .header__nav {
-    display: none; }
-  .header__nav--btn-wrap {
-    margin-left: 66%; }
-  .we-do__content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
+/*@media (max-width:768px){
+  
+.container{
+    width: 720px;
+}
+.header{
+    margin-bottom: 5%;
+}
+.header__nav{
+    display: none;
+}
+.header__nav--btn-wrap {
+    margin-left: 66%;
+}
+.we-do__content{
     flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
-  .we-do__text {
+    align-items: center;
+}
+.we-do__text {
     margin-left: 1%;
     padding-top: 0%;
-    width: 55%; }
-  .we-do__img {
-    margin-left: 0; } }
+    width: 55%;
+}
+.we-do__img {
+    margin-left: 0;
+}
+}
 
-@media (min-width: 320px) and (max-width: 480px) {
-  html {
-    font-size: 14px; }
-  .container {
-    width: 460px; }
-  .header__nav--btn-wrap {
-    margin-left: 44%; }
-  /*.we-do__img {
+
+@media (min-width:320px) and (max-width:480px){
+    html{
+        font-size: 14px;
+    }
+    .container{
+        width: 460px;
+    }
+    .header__nav--btn-wrap {
+        margin-left: 44%;
+    }
+    .we-do__img {
         width: 26rem;
         height: 20.5rem;
-    }*/
-  .we-do__text {
-    width: 73%; } }
+    }
+    .we-do__text {  
+        width: 73%;
+    }
+}
+*/
+/*@media (max-width:768px){
+    .we-best__title {
+        margin-bottom: 9%;
+    }
+    .advantages__img--sheet {
+        margin-bottom: 7%;
+    }
 
-@media (max-width: 768px) {
-  .we-best__title {
-    margin-bottom: 9%; }
-  .advantages__img--sheet {
-    margin-bottom: 7%; } }
-
-@media (min-width: 320px) and (max-width: 480px) {
-  .advantages {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; }
-  .advantages__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row; }
-  .advantages__title {
-    text-align: left; }
-  .advantages__text {
-    text-align: left; } }
+}
+*/
+/*@media (min-width:320px) and (max-width:480px){
+    .advantages{
+        flex-direction: column;
+    }
+    .advantages__item{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 7%;
+    }
+    .advantages__title{
+        text-align: left;
+    }
+    .advantages__text{
+        text-align: left;
+    }
+    .we-best__title{
+        font-size: 3.57rem;
+        line-height: 4.29rem;
+        margin-bottom: 0%;
+    }
+    .advantages__text-wrap {
+        width: 62%;
+    }
+    .advantages__img--meat{
+        margin-right: 9%;
+    }
+    .advantages__img--hand{
+        margin-right: 15%;
+    }
+    .advantages__img--sheet{
+        margin-right: 12%;
+    }
+}*/
