--- a/SCSS/components/team.scss
+++ b/SCSS/components/team.scss
@@ -18,18 +18,47 @@ right: 0;
 background-color: rgba(7,50,52,0.9);
 width: 50%;
 min-height: 100%;
+@include phone {
+   width: 100%;
+}
+@include tablet {
+    width: 100%;
+}
 }
 .team__title{
     @include fontOrangeGagalin;
     line-height: 4rem;
     margin-left: -16%;
     margin-bottom: 8%;
+   
+     @include tablet {
+        margin-left: 0;
+        margin-bottom: 5.5%;
+     }
+     @include phone {
+        margin-left: 0;
+        margin-bottom: 2.5%;
+        font-size: 3.57rem;
+        line-height: 4.28rem;
+     }
 }
 .team__list{
     list-style: none;
     margin: 0;
     padding: 0;
     margin-left: 19%;
+    @include phone {
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+     @include tablet {
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
 }
 /*.team__block--close{
     height: 0;
@@ -44,6 +73,17 @@ min-height: 100%;
     margin-left: 1%;
     margin-top: 2%;
     display: flex;
+   
+     @include tablet {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 28%;
+     }
+     @include phone {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 26%;
+     }
 }
 .team__member{
     background-color: transparent;
@@ -68,6 +108,14 @@ min-height: 100%;
     border-left: 5.5px solid transparent;
     border-right: 5.5px solid transparent;
 }
+@include phone {
+    font-size: 1.5rem;
+    line-height: 1.8rem; 
+ }
+ @include tablet {
+   font-size: 1.5rem;
+   line-height: 1.8rem; 
+ }
 }
 
 .team__block--image{
@@ -80,6 +128,12 @@ min-height: 100%;
     font-size: 0.8rem;
     line-height: 1.5rem;
     font-weight:600;
+    @include phone {
+        margin-bottom: -1%; 
+     }
+     @include tablet {
+        margin-bottom: -1%; 
+     }
 }
 .team__block--text{
     @include fontUbuntu ;
@@ -93,12 +147,54 @@ min-height: 100%;
     align-items: center;
     padding-top: 8%;
     padding-right: 17%;
+    @include phone {
+        padding-right: 0;
+     }
+     @include tablet {
+        padding-right: 0;
+     }
 }
 .team__item {
     margin-bottom: 4.5%;
+  
+     @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+     @include phone {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 9%;
+     }
 }
 .team__block--content {
     margin-left: 4%;
     margin-top: -4%;
     width: 43%;
+   
+     @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0%;
+        width: 75%;
+        text-align: center;
+        margin-top: 1%;
+     }
+     @include phone {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+        width: 75%;
+        text-align: center;
+        margin-top: 3%;
+     }
+}
+.team__block--image-wrap{
+    @include phone {
+        margin-top: 3%;
+     }
 }
