--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -23,19 +23,28 @@
     width: 100%;
     height: 100%;
     background-color: $colorBlack;
+ 
+    
 }
 
 .reviews__hover {
-    visibility: hidden;
+    visibility: visible;
     position: absolute;
     height: 100%;
+    width: 100%;
     z-index: 10;
     top: 0%;
     left: 0%;
     background-color: rgba(20, 20, 20, 0.7);
-    opacity: 0;
+    opacity: 1;
     padding-top: 10%;
     padding-left: 7%;
+    @include tablet {
+        text-align: center;
+     }
+     @include phone {
+        text-align: center;
+     }
 }
 
 .reviews__hover--title {
@@ -44,6 +53,10 @@
     font-weight: 400;
     line-height: 1.75rem;
     color: $colorWhite;
+    @include phone {
+        font-size: 1.7rem;
+        line-height: 2rem;
+     }
 }
 
 .reviews__hover--text {
@@ -52,6 +65,9 @@
     font-weight: 400;
     line-height: 1.5rem;
     width: 86%;
+    @include phone {
+        @include  visuallyHidden;  
+     }
 }
 
 .reviews__hover--btn {
@@ -81,10 +97,38 @@
            
         }
     }
+    @include tablet {
+       width: 50%;
+       height: 25%;
+    }
+    @include phone{
+        width: 50%;
+        height: 25%;
+    }
 }
 
 .reviews__img {
     width: 100%;
     height: 100%;
     filter: grayscale(100%);
+}
+.btn-text1{
+    display: block;
+
+    @include tablet {
+        display: block;
+     }
+     @include phone{
+        display: none;
+    }
+}
+.btn-text2{
+    display: none;
+    
+    @include tablet {
+        display: none;
+     }
+     @include phone{
+        display: block;
+    }
 }
