--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,9 @@ body {
   margin-bottom: 300%; }
 
 /*Стилизация Breadcrumbs close*/
+.header__logo {
+  z-index: 51; }
+
 .we-do__next-step--link {
   display: block;
   background-image: url(../img/icons/arrow-scroll.svg);
@@ -178,6 +181,9 @@ body {
   margin-left: 3.1%;
   padding-top: 2%; }
   @media screen and (max-width: 768px) {
+    .header__nav {
+      display: none; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
     .header__nav {
       display: none; } }
 
@@ -253,7 +259,7 @@ body {
   position: fixed;
   top: 14%;
   right: 15.5%;
-  z-index: 50; }
+  z-index: 30; }
 
 .we-do__next-step {
   display: -webkit-box;
@@ -265,6 +271,84 @@ body {
   margin-top: 8%; }
 
 /*Сетки close*/
+/*popup nav*/
+.nav-popup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(47, 50, 52, 0.9);
+  display: none;
+  z-index: 50; }
+  @media screen and (max-width: 768px) {
+    .nav-popup {
+      display: none; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .nav-popup {
+      display: none; } }
+
+@media screen and (max-width: 768px) {
+  .nav-popup--link {
+    text-decoration: none;
+    font-family: Ubuntu, Arial, sans-serif;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 300;
+    line-height: 1.8rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .nav-popup--link:hover {
+      text-decoration: underline; } }
+
+@media screen and (max-width: 768px) {
+  .nav-popup__nav {
+    margin: 0;
+    padding: 0;
+    margin-top: 28%; } }
+
+.nav-popup--list {
+  list-style: none; }
+  @media screen and (max-width: 768px) {
+    .nav-popup--list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0;
+      padding: 0; } }
+
+.nav-popup--item {
+  position: relative; }
+  @media screen and (max-width: 768px) {
+    .nav-popup--item {
+      margin-bottom: 4.2%; } }
+  .nav-popup--item::before {
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    top: -60%;
+    left: 50%; }
+    @media screen and (max-width: 768px) {
+      .nav-popup--item::before {
+        top: -60%;
+        left: 50%; } }
+  .nav-popup--item:first-child::before {
+    display: none; }
+
 .we-best {
   background-size: cover;
   background-repeat: no-repeat;
