--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -1,27 +1,29 @@
 
-html{
+html {
     font-size: 16px;
-    @include phone{
+    @include phone {
         font-size: 14px;
     }
 }
+
 body {
     min-width: 960px;
 }
-.wrapper{
-position: relative;
-  width: 100%;
-  
-  min-height: 100%;
-  overflow: hidden;
+
+.wrapper {
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+    overflow: hidden;
 }
+
 .container {
     @include container;
     @include tablet {
         width: 720px;
         min-height: 1025px;
     }
-    @include phone{
+    @include phone {
         width: 460px;
         min-height: 800px;
     }
@@ -40,7 +42,6 @@ position: relative;
     &:hover {
         text-decoration: underline;
     }
-    
 }
 
 .header__nav--btn {
@@ -52,6 +53,49 @@ position: relative;
     display: block;
     text-align: center;
 }
+
+.header__nav--hamburger {
+    position: absolute;
+    
+    text-decoration: none;
+    display: none;
+    width: 25px;
+    height: 5px;
+    background-color: $colorWhite;
+    border-radius: 5px;
+    @include tablet {
+        display: block;
+        top: 5%;
+    right: 2.5%;
+    }
+    @include phone {
+        display: block;
+        top: 5.5%;
+    right: 5.5%;
+
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        top: 200%;
+        width: 25px;
+    height: 5px;
+    background-color: $colorWhite;
+    border-radius: 5px;
+    
+    }
+    &::after{
+        content: "";
+        position: absolute;
+        top: -200%;
+        width: 25px;
+    height: 5px;
+    background-color: $colorWhite;
+    border-radius: 5px;
+    
+    }
+}
+
 
 .we-do__text--first {
     @include fontOrangeGagalin;
@@ -68,23 +112,22 @@ position: relative;
     {
     list-style: none;
 }
+
 /*Стилизация Breadcrumbs*/
 
-.breadcrumbs__list{
+.breadcrumbs__list {
     list-style: none;
-    
-  }
+}
 
-  .breadcrumbs__link{
+.breadcrumbs__link {
     width: 5px;
-      height: 5px;
-      display: block;
-      position: relative;
-  }
-  
-  .breadcrumbs__link:after
-  {
-    position:absolute;
+    height: 5px;
+    display: block;
+    position: relative;
+}
+
+.breadcrumbs__link:after {
+    position: absolute;
     content: "";
     background: white;
     color: white;
@@ -92,41 +135,42 @@ position: relative;
     width: 6px;
     display: block;
     border-radius: 50%;
-  }
-  .breadcrumbs__link:hover::before
-  {
-    content: "";
-    border:1px solid white;
-    height: 16px;
-    width: 16px;
-    display: block;
-    border-radius: 50%;
-    position:absolute;
-     top:-6px;
-    left:-6px;
-  }
-  .breadcrumbs__link:active::before
-  {
-    content: "";
-    border:1px solid white;
-    height: 16px;
-    width: 16px;
-    display: block;
-    border-radius: 50%;
-    position:absolute;
-     top:-6px;
-    left:-6px;
-  }
+}
 
-  .breadcrumbs__item{
-    margin-bottom:300%;
-  }
-  
+.breadcrumbs__link:hover::before {
+    content: "";
+    border: 1px solid white;
+    height: 16px;
+    width: 16px;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: -6px;
+    left: -6px;
+}
+
+.breadcrumbs__link:active::before {
+    content: "";
+    border: 1px solid white;
+    height: 16px;
+    width: 16px;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: -6px;
+    left: -6px;
+}
+
+.breadcrumbs__item {
+    margin-bottom: 300%;
+}
+
 /*Стилизация Breadcrumbs close*/
 
-.header__logo{
+.header__logo {
     z-index: 51;
 }
+
 .we-do__next-step--link {
     display: block;
     background-image: url(../img/icons/arrow-scroll.svg);
@@ -148,7 +192,6 @@ position: relative;
 
 .header__nav--list {
     display: flex;
-    
 }
 
 .header__nav {
@@ -160,14 +203,11 @@ position: relative;
     @include phone {
         display: none;
     }
-  
 }
 
 .header__nav--item {
     position: relative;
     margin-right: 38px;
-    
-
     &:last-child {
         margin-right: 0;
     }
@@ -180,12 +220,10 @@ position: relative;
         border-radius: 50%;
         top: 13px;
         left: -19px;
-        
     }
     &:first-child::before {
         display: none;
     }
-   
 }
 
 .header__nav--btn-wrap {
@@ -194,7 +232,7 @@ position: relative;
     @include tablet {
         margin-left: 66%;
     }
-    @include phone{
+    @include phone {
         margin-left: 44%;
     }
 }
@@ -203,9 +241,10 @@ position: relative;
     display: flex;
     @include tablet {
         flex-direction: column;
-    align-items: center;
+        align-items: center;
     }
 }
+
 .we-do__img {
     margin-left: 4%;
     background-repeat: no-repeat;
@@ -216,17 +255,17 @@ position: relative;
     @include tablet {
         margin-left: 0;
     }
-    }
+}
 
 .we-do__text {
     margin-left: 3%;
     padding-top: 14%;
     @include tablet {
         margin-left: 1%;
-    padding-top: 0%;
-    width: 55%;
+        padding-top: 0%;
+        width: 55%;
     }
-    @include phone{
+    @include phone {
         width: 73%;
     }
 }
@@ -251,28 +290,26 @@ position: relative;
 
 /*Сетки close*/
 
-
-
 /*popup nav*/
-.nav-popup{
+
+.nav-popup {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
-    width:100% ;
+    width: 100%;
     height: 100%;
-    background-color: rgba(47,50,52,0.9);
+    background-color: rgba(47, 50, 52, 0.9);
     display: none;
     z-index: 50;
     @include tablet {
         display: none;
     }
-    @include phone{
+    @include phone {
         display: none;
     }
 }
 
-
-.nav-popup--link{
+.nav-popup--link {
     @include tablet {
         @include fontUbuntu;
         text-transform: uppercase;
@@ -284,17 +321,17 @@ position: relative;
         display: flex;
         justify-content: center;
     }
-    
 }
-.nav-popup__nav{
+
+.nav-popup__nav {
     @include tablet {
-        
-    margin: 0;
-    padding: 0;
-    margin-top: 28%;
-    } 
+        margin: 0;
+        padding: 0;
+        margin-top: 28%;
+    }
 }
-.nav-popup--list{
+
+.nav-popup--list {
     list-style: none;
     @include tablet {
         flex-direction: column;
@@ -302,37 +339,44 @@ position: relative;
         margin: 0;
         padding: 0;
     }
-    }
-    .nav-popup--item{
-        position: relative;
-        
-        @include tablet {
-            
-            margin-bottom: 4.2%;
-         }
-    
-       
-        &::before {
-            content: "";
-            position: absolute;
-            background-color: $colorWhite;
-            width: 4px;
-            height: 4px;
-            border-radius: 50%;
-            top: -60%;
-    left: 50%;
-            @include tablet {
-                top: -60%;
-    left: 50%;
-       
-            }
-        }
-        &:first-child::before {
-            display: none;
-        }
-    }
+}
 
-    .nav-popup__btn{
-       // background-color: transparent;
-      //  border: none;
+.nav-popup--item {
+    position: relative;
+    @include tablet {
+        margin-bottom: 4.2%;
     }
+    &::before {
+        content: "";
+        position: absolute;
+        background-color: $colorWhite;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        top: -60%;
+        left: 50%;
+        @include tablet {
+            top: -60%;
+            left: 50%;
+        }
+    }
+    &:first-child::before {
+        display: none;
+    }
+}
+
+.nav-popup__btn {
+    position: absolute;
+    top: 0.35%;
+    right: 14%;
+    width: 20px;
+    height: 20px;
+    font-size: 0;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    box-sizing: border-box;
+    background-image: url(../img/btnclose.png);
+    background-repeat: no-repeat;
+    outline: none;
+}
