--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -5,10 +5,12 @@
     width: 100%;
     margin-bottom: -3.5%;
     @include phone {
-        min-height: 800px;
+        min-height: 650px;
+        height: 100vh;
     }
     @include tablet {
-        min-height: 1025px;
+        min-height:650px;
+        height: 100vh;
     }
 }
 .reviews__title{
@@ -111,6 +113,7 @@
     width: 100%;
     height: 100%;
     filter: grayscale(100%);
+    object-fit:cover;
 }
 .btn-text1{
     display: block;
