--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -7,7 +7,8 @@ html {
 }
 
 body {
-    min-width: 960px;
+   width: 100%;
+   height: 100%;
 }
 
 .wrapper {
@@ -48,9 +49,9 @@ body {
 .header__nav--btn {
     @include btn;
     @include fontUbuntu;
+    line-height: 0;
     text-transform: uppercase;
-    padding-left: 16%;
-    padding-right: 16%;
+    
     display: block;
     text-align: center;
 }
@@ -208,7 +209,7 @@ body {
 
 .header__nav--item {
     position: relative;
-    margin-right: 38px;
+    margin-right: 2.4rem;
     &:last-child {
         margin-right: 0;
     }
