--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -77,11 +77,9 @@
     @include fontUbuntu;
     font-size: 0.81rem;
     font-weight: 400;
-    line-height: 1.875rem;
+    line-height: 0;
     background-color: $colorBlack;
-    padding-bottom: 1%;
-    padding-left: 5%;
-    padding-right: 4%;
+    
     &:hover {
         background-color: #1f2122;
     }
