--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ html {
       font-size: 14px; } }
 
 body {
-  min-width: 960px; }
+  width: 100%;
+  height: 100%; }
 
 .wrapper {
   position: relative;
@@ -70,19 +71,18 @@ body {
   color: white;
   text-transform: uppercase;
   cursor: pointer;
-  padding-top: 1%;
-  padding-bottom: 4%;
-  padding-left: 19%;
-  padding-right: 16%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   text-decoration: none;
   font-family: Ubuntu, Arial, sans-serif;
   color: white;
   font-size: 0.8rem;
   font-weight: 300;
   line-height: 1.8rem;
+  line-height: 0;
   text-transform: uppercase;
-  padding-left: 16%;
-  padding-right: 16%;
   display: block;
   text-align: center; }
   .header__nav--btn:hover {
@@ -224,7 +224,7 @@ body {
 
 .header__nav--item {
   position: relative;
-  margin-right: 38px; }
+  margin-right: 2.4rem; }
   .header__nav--item:last-child {
     margin-right: 0; }
   .header__nav--item::before {
@@ -644,10 +644,10 @@ body {
   color: white;
   text-transform: uppercase;
   cursor: pointer;
-  padding-top: 1%;
-  padding-bottom: 4%;
-  padding-left: 19%;
-  padding-right: 16%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   text-decoration: none;
   font-family: Ubuntu, Arial, sans-serif;
   color: white;
@@ -656,11 +656,8 @@ body {
   line-height: 1.8rem;
   font-size: 0.81rem;
   font-weight: 400;
-  line-height: 1.875rem;
-  background-color: #2f3234;
-  padding-bottom: 1%;
-  padding-left: 5%;
-  padding-right: 4%; }
+  line-height: 0;
+  background-color: #2f3234; }
   .reviews__hover--btn:hover {
     background-color: #c1401e; }
   .reviews__hover--btn:hover {
@@ -1240,14 +1237,21 @@ body {
   color: white;
   text-transform: uppercase;
   cursor: pointer;
-  padding-top: 1%;
-  padding-bottom: 4%;
-  padding-left: 19%;
-  padding-right: 16%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  line-height: 0;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-right: 3%; }
   .form__submit:hover {
     background-color: #c1401e; }
