--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -41,6 +41,7 @@ body {
 .header__nav--link {
     @include fontUbuntu;
     text-transform: uppercase;
+    white-space: nowrap;
     &:hover {
         text-decoration: underline;
     }
