--- a/SCSS/components/slider.scss
+++ b/SCSS/components/slider.scss
@@ -1,6 +1,143 @@
 .slider{
   
-    background-color: $colorOrange;
-   
-   
+ background-image: linear-gradient( 90deg, rgb(249,180,59) 0%, rgb(235,140,56) 48%, rgb(249,180,59) 74%);
+ padding-top: 9.5%;  
+ position: relative;
+}
+.slider__gamb--img{
+    width: 28.43rem;
+    height: 19.75rem;
+}
+.slider__gamb--svg{
+    width: 2.93rem;
+    height: 2.56rem;
+    position: absolute;
+top: 20%;
+left: 25%;
+}
+.slider__content--consist{
+    position: absolute;
+    top: -12%;
+left: 0%;
+    width: 5.6rem;
+    height: 5.6rem;
+    background-color: $colorRed;
+    border-radius: 5px;
+}
+.slider__gamb--text{
+    @include fontOrangeGagalin;
+    font-size: 0.875rem;
+    line-height: 1.75rem;
+    color: $colorWhite;
+    position: absolute;
+    left: 25%;
+    top: 65%;
+}
+.slider__content--kkal {
+    position: absolute;
+    top: 90%;
+left: 1%;
+}
+.slider__kkal--1200{
+    @include fontOrangeGagalin;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    position: absolute;
+top: 32%;
+left: 23%;
+}
+.slider__kkal--kkal{
+    @include fontOrangeGagalin;
+    font-size: 0.875rem;
+    line-height: 1.75rem;
+    position: absolute;
+top: 85%;
+left: 23%;
+}
+.slider__kkal--svg{
+    fill: $colorOrange;
+    width: 3.75rem;
+    height: 3.75rem;
+}
+.slider__content-title{
+    @include fontOrangeGagalin;
+    color: $colorWhite;
+    margin: 0;
+    line-height: 4rem;
+    margin-bottom: 11%;
+}
+.slider__content--text{
+    @include fontUbuntu;
+line-height: 1.5rem;
+margin-bottom: -1%;
+}
+.slider__content--price{
+    @include fontOrangeGagalin;
+    line-height: 1.75;
+    color: $colorRed;
+}
+.slider__content--rub{
+    @include fontOrangeGagalin;
+    font-size: 1.875rem;
+     line-height: 1.75;
+     color: $colorRed;
+}
+.slider__content--btn{
+@include btn;
+@include  fontUbuntu;
+line-height: 0;
+padding-top: 17px;
+padding-bottom: 17px;
+padding-left: 18px;
+padding-right: 18px;
+margin-left: 4%;
+}
+.slider__content {
+    display: flex;
+}
+.slider__content--left,
+.slider__content--right{
+    position: relative;
+    width: 45%;
+}
+.slider__content--right {
+    margin-left: 6.5%;
+}
+.slider__link--left{
+    display: block;
+    background-image: url(../img/arrow-scrollleft.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 1rem;
+    height: 1.75rem;
+}
+.slider__link--right{
+    display: block;
+    background-image: url(../img/arrow-scrollright.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 1rem;
+    height: 1.75rem;
+}
+.slider__linkblock--left {
+    position: absolute;
+    top: 27.5%;
+    left: -2.5%;
+}
+.slider__linkblock--right {
+    position: absolute;
+    top: 27.5%;
+    right: -2.5%;
+}
+
+.slider__popup{
+    position: absolute;
+}
+.slider__popup--close{
+    
+    display: none;
+}
+.slider__popup--open{
+    position: absolute;
+    display: block;
 }
