--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ body {
   font-size: 0.8rem;
   font-weight: 300;
   line-height: 1.8rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  white-space: nowrap; }
   .header__nav--link:hover {
     text-decoration: underline; }
 
@@ -549,7 +550,194 @@ body {
     width: 62%; } }
 
 .slider {
-  background-color: #f9b43b; }
+  background-image: -webkit-gradient(linear, left top, right top, from(#f9b43b), color-stop(48%, #eb8c38), color-stop(74%, #f9b43b));
+  background-image: -webkit-linear-gradient(left, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
+  background-image: -o-linear-gradient(left, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
+  background-image: linear-gradient(90deg, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%);
+  padding-top: 9.5%;
+  position: relative; }
+
+.slider__gamb--img {
+  width: 28.43rem;
+  height: 19.75rem; }
+
+.slider__gamb--svg {
+  width: 2.93rem;
+  height: 2.56rem;
+  position: absolute;
+  top: 20%;
+  left: 25%; }
+
+.slider__content--consist {
+  position: absolute;
+  top: -12%;
+  left: 0%;
+  width: 5.6rem;
+  height: 5.6rem;
+  background-color: #e35028;
+  border-radius: 5px; }
+
+.slider__gamb--text {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+  color: white;
+  position: absolute;
+  left: 25%;
+  top: 65%; }
+
+.slider__content--kkal {
+  position: absolute;
+  top: 90%;
+  left: 1%; }
+
+.slider__kkal--1200 {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  position: absolute;
+  top: 32%;
+  left: 23%; }
+
+.slider__kkal--kkal {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+  position: absolute;
+  top: 85%;
+  left: 23%; }
+
+.slider__kkal--svg {
+  fill: #f9b43b;
+  width: 3.75rem;
+  height: 3.75rem; }
+
+.slider__content-title {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  color: white;
+  margin: 0;
+  line-height: 4rem;
+  margin-bottom: 11%; }
+
+.slider__content--text {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  line-height: 1.5rem;
+  margin-bottom: -1%; }
+
+.slider__content--price {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  line-height: 1.75;
+  color: #e35028; }
+
+.slider__content--rub {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  font-size: 1.875rem;
+  line-height: 1.75;
+  color: #e35028; }
+
+.slider__content--btn {
+  background-color: #e35028;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  line-height: 0;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  padding-left: 18px;
+  padding-right: 18px;
+  margin-left: 4%; }
+  .slider__content--btn:hover {
+    background-color: #c1401e; }
+
+.slider__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.slider__content--left,
+.slider__content--right {
+  position: relative;
+  width: 45%; }
+
+.slider__content--right {
+  margin-left: 6.5%; }
+
+.slider__link--left {
+  display: block;
+  background-image: url(../img/arrow-scrollleft.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 1rem;
+  height: 1.75rem; }
+
+.slider__link--right {
+  display: block;
+  background-image: url(../img/arrow-scrollright.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 1rem;
+  height: 1.75rem; }
+
+.slider__linkblock--left {
+  position: absolute;
+  top: 27.5%;
+  left: -2.5%; }
+
+.slider__linkblock--right {
+  position: absolute;
+  top: 27.5%;
+  right: -2.5%; }
+
+.slider__popup {
+  position: absolute; }
+
+.slider__popup--close {
+  display: none; }
+
+.slider__popup--open {
+  position: absolute;
+  display: block; }
 
 .reviews {
   min-height: 650px;
